# newsfaces

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  databeakers.toml  pyproject.toml  test_wayback.ipynb
.github/workflows/: test.yml
src/newsfaces/: Scraper_Class_obj.py  Scraping-fox.ipynb  Washington Post.ipynb  ap.py  associatedpress.ipynb  bbc.ipynb  crawler.py  delete.ipynb  export_to_csv.py  extract_html.py  fox_articles.csv  images.py  label_images.py  models.py  nbc.csv  nbc.ipynb  nbc.py  pipeline.py  pipeline_helpers.py  politicians.py  politico.ipynb  politico.py  scraper_classes.py  test.csv  test_utils.ipynb  the hill.ipynb  thehill.csv  utils  utils.py  washingtontimes.csv  washingtontimes.ipynb
src/newsfaces/Exploratory_scrapers/: Scraping-fox.ipynb  Washington Post.ipynb  associatedpress.ipynb  bbc.ipynb  bbc_articles.csv  nbc.ipynb  politico.ipynb  test.csv  the hill.ipynb  utils.py  washingtontimes.csv  washingtontimes.ipynb
src/newsfaces/crawlers/: __init__.py  ap.py  bbc.py  breitbart.py  cnn.py  crawler.py  daily.py  extract_html.py  fox.py  hill.py  nbc.py  newsmax.py  npr.py  nyt.py  politico.py  scraper_classes.py  wapo.py  washington_times.py
url_scrapers/: bloomberg_url_scrapers.ipynb  breitbart_url_scraper.ipynb  cnn_url_scraper.ipynb  daily_caller_url_scraper.ipynb  exploration.ipynb  npr_url_scraper.ipynb  nyt_url_scraper.ipynb  reuters_url_scraper.ipynb  test_extract.ipynb  the_hill.ipynb  utils.py  washington_post_url_scraper.ipynb
