[tool.poetry]
name = "newsfaces"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
structlog = "^23.1.0"
httpx = "^0.24.1"
lxml = "^4.9.2"
cssselect = "^1.2.0"
pydantic = "^1.10.9"
typer = "^0.9.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
