[project]
name = "newsfaces"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cssselect>=1.3.0",
    "databeakers>=0.3.9",
    "httpx>=0.24.1",
    "jupyter>=1.1.1",
    "lxml>=5.4.0",
    "pydantic>=2.11.5",
    "pytz>=2025.2",
    "structlog>=23.3.0",
    "typer>=0.9.4",
    "wayback>=0.4.5",
]

[tool.uv.sources]
databeakers = { path = "../databeakers", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
